added responsive pages

--- a/src/styles.css
+++ b/src/styles.css
@@ -115,3 +115,10 @@
         background-position: 0% 50%;
     }
 }
+
+/* .container-fluid {
+    padding-right: 0;
+    padding-left: 0;
+    margin-right: 0;
+    margin-left: 0;
+} */
