--- a/src/styles.css
+++ b/src/styles.css
@@ -116,6 +116,92 @@
     }
 }
 
+.App {
+  text-align: center;
+  width: 95%;
+  max-width: 800px;
+  margin: 6rem auto 0;
+}
+
+.user-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 0.5rem;
+}
+
+.user-card {
+  display: flex;
+  padding: 0.5rem;
+  border: 1px solid grey;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: all 0.25s ease;
+}
+.user-card:hover {
+  background-color: #0a0a0a;
+}
+
+.avatar {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+
+.info {
+  text-align: left;
+  margin-left: 1rem;
+}
+
+.info h3,
+.info p {
+  margin-bottom: 0.5rem;
+}
+
+.user-post {
+  max-width: 500px;
+  width: 95%;
+  margin: 0 auto;
+}
+
+.user-post h2 {
+  margin: 1rem auto;
+  color: white;
+}
+
+.user-post a {
+  cursor: pointer;
+  text-decoration: none;
+}
+.user-post a:hover {
+  color: #5dd4ac;
+}
+
+@media (max-width: 600px) {
+  .user-container {
+    grid-template-columns: 1fr;
+  }
+}
+ 
+/* CardSkeleton.css */
+
+.card-skeleton {
+    display: flex;
+    border: 1px solid #ddd;
+    padding: 1rem;
+    margin-bottom: 1rem;
+    border-radius: 10px; 
+    background-color: #f2f2f2;
+  }
+  
+  .left-col {
+    margin-right: 1rem;
+  }
+  
+  .right-col {
+    flex-grow: 1;
+  }
+
+
 /* .container-fluid {
     padding-right: 0;
     padding-left: 0;
